@@ -9,6 +9,10 @@
 export DH_COMPAT=3
 PACKAGE_VERSION=`dpkg-parsechangelog | sed -n 's/Version: //p'`
 
+DSH=$(CURDIR)/debian/dsh
+LIBDSHCONFIG=$(CURDIR)/debian/libdshconfig0
+LIBDSHCONFIGDEV=$(CURDIR)/debian/libdshconfig0-dev
+
 configure: configure-stamp
 configure-stamp:
 	dh_testdir
@@ -43,6 +47,11 @@ install: build
 	ln -s ../machines.list $(CURDIR)/debian/dsh/etc/dsh/group/all
 	install -d $(CURDIR)/debian/dsh/usr/lib/update-cluster
 	install -m 755 $(CURDIR)/debian/dsh.updatelist $(CURDIR)/debian/dsh/usr/lib/update-cluster/
+	install -d $(LIBDSHCONFIG)/usr/lib
+	mv $(DSH)/usr/lib/libdshconfig.so.* $(LIBDSHCONFIG)/usr/lib
+	install -d $(LIBDSHCONFIGDEV)/usr/lib $(LIBDSHCONFIGDEV)/usr/include
+	mv $(DSH)/usr/lib/libdshconfig.* $(LIBDSHCONFIGDEV)/usr/lib
+	mv $(DSH)/usr/include/* $(LIBDSHCONFIGDEV)/usr/include
 
 # Build architecture-independent files here.
 binary-indep: build install
@@ -59,6 +68,7 @@ binary-arch: build install
 	dh_installchangelogs
 	dh_link
 	dh_strip
+	dh_makeshlibs -V
 	dh_shlibdeps
 	dh_compress
 	dh_fixperms
